# tinder-ai

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: publish.yml  release.yml
bot/: Pipfile  main.py  requirements.txt  session.py  settings.py
bot/constants/: models.py
bot/helpers/: login.py  matcher.py  preferences.py  profile.py
bot/services/: login.py  match.py  preferences.py
bot/src/: session.py  settings.py
bot/src/constants/: models.py
bot/src/services/: location.py  login.py  match.py  messenger_api.py  preferences.py
bot/src/utils/: logger.py
bot/testing/: test_proxy.py  test_settings.py
bot/utils/: __init__.py  addproxy.py  logger.py
bot_project/: main.py
bot_project/bot/: session.py  settings.py
bot_project/bot/constants/: models.py
bot_project/bot/helpers/: login.py  preferences.py
bot_project/bot/services/: location.py  login.py  match.py  matcher.py  preferences.py
bot_project/messenger/: README.md
bot_project/testing/: test_proxy.py  test_settings.py
messenger/: Dockerfile
messenger/app/: dependencies.py  main.py
messenger/testing/: test_agent.py  test_database.py  test_messenger_api.py
proxy/: 3proxy.cfg.example  Dockerfile
shared/: __init__.py  exceptions.py  models.py
tinder_ai/: __init__.py  __main__.py  session.py  settings.py
tinder_ai/services/: match.py  messenger_api.py  preferences.py
tinder_ai/shared/: __init__.py  models.py
tinder_ai/utils/: __init__.py  utils.py
(+11 files in other folders)
