[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["timfdev"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
undetected-chromedriver = "^3.5.5"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
numpy = "^1.22.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
