[tool.poetry]
name = "tinder-bot-manager"
version = "0.1.0"
description = "A bot manager for Tinder automation."
authors = ["timfdev <timfdevgithub.com/timfdev>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "bot" },
    { include = "shared" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
undetected-chromedriver = "^3.5.5"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
numpy = "^1.22.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
