[tool.poetry]
name = "tinder-ai"
version = "0.1.3"
description = "A Tinder bot SDK using Selenium and AI"
authors = ["timfdev <frohcode@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "tinder_ai" },
    { include = "shared" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
undetected-chromedriver = "^3.5.5"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
numpy = "^1.22.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"